# eu-state-aids

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.cfg  tox.ini
eu_state_aids/: __main__.py  bg.py  it.py  main.py  utils.py
op_state_aids/: __init__.py  __main__.py  bg.py  main.py  utils.py
tests/: bg_projects_sample.xlsx  bg_state_aids.xlsx  test_eu_state_aids.py  test_op_state_aids.py
