[tool.poetry]
name = "op-state-aids"
version = "0.1.0"
description = "CLI to extract state aids data from public sources and produce CSV files"
authors = ["guglielmo <guglielmo@openpolis.it>"]
maintainers = ["guglielmo <guglielmo@openpolis.it>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
op-state-aids = "op_state_aids.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
openpyxl = "^3.0.7"
pandas = "^1.2.4"
requests = "^2.25.1"
validators = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
